<resources>
    <string name="app_name">DoggyDates</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loginButton">Button</string>
    <string name="signUpButton">Button</string>
    <string name="loginBackgroun">TODO</string>
    <string name="doggy_dates">Doggy Dates</string>
    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="confirm">confirmEmail</string>
    <string name="confirmEmail">Confirm Email</string>
    <string name="createPassword">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="doggydates">DoggyDates</string>
</resources>